# NUQ

./: .gitignore  .pre-commit-config.yaml  AUTHORS  ChangeLog  README.md  environment.yaml  example.ipynb  example.py  pyproject.toml  remote.py  requirements.txt  run.py  setup.cfg  setup.py  test-regression-datasets.ipynb  test-regression.ipynb  test_regression.ipynb  test_regression.py  tests.ipynb
examples/: OLD_test-regression.ipynb  OLD_tests.ipynb  classification.ipynb  classification_exact.ipynb  example.ipynb  imagenet.ipynb  metrics.py  nuq_example.ipynb  nuq_example.py  regression.ipynb
nuq/: __init__.py  bandwidth_selection.py  dup.py  kernels.py  misc.py  nuq_classifier.py  nuq_classifier_exact.py  nuq_classifier_naive.py  nuq_regressor.py  ray_utils.py  utils.py
nuq/method/: __init__.py  aux_functions.py  classification.py  compute_expectations.py  nuq.py  nuq_classifier.py
nuq/tests/: test_rbf.py
nuq/utils/: __init__.py  bandwidth_selection.py
nw_uncertainty/: __init__.py
nw_uncertainty/method/: __init__.py  compute_expectations.py  nw_method.py
nw_uncertainty/utils/: __init__.py  aux_functions.py  bandwidth_selection.py
spectral_normalized_models/: ddu.py
tests/: OLD_test_rbf.py  basic_test.py  test_finite.py  test_overfitting.py  test_rbf.py
