[metadata]
name = nuq
home_page = https://github.com/nkotelevskii/nw_uncertainty
author = N. Kotelevskii et al.
author_email = nikita.kotelevskii@skoltech.ru
project_urls =
    Source Code = https://github.com/nkotelevskii/nw_uncertainty
summary = Non-parametric uncertainty estimation method (NUQ)

license = Apache-2
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

python_requires = >=3.8

[files]
packages = nuq

[flake8]
# Allow unused imports in __init__.py
per-file-ignores = __init__.py:F401
